--- a/code/app/src/client/styles/typography.scss
+++ b/code/app/src/client/styles/typography.scss
@@ -32,7 +32,7 @@ $headings-color-secondary: $grey-600;
 
 //headings
 $headings-margin-top: $line-height-rem;
-$headings-margin-bottom: 4rem;
+$headings-margin-bottom: 1rem;
 
 $h1-font-size: scaleUp(7); //8 or 7
 $h1-line-height: $line-height-rem * 3;
